--- a/firmware/web/src/index.html
+++ b/firmware/web/src/index.html
@@ -16,11 +16,12 @@ body {
 table {
 	margin: 0px auto;
 }
-#statustable-elevation {
-	display: none;
-}
 .table-bearings-button {
 	width: 100%;
+}
+#stop-button {
+	color: red;
+    font-weight: bold;
 }
 #tracking-cw-span #tracking-cw-span {
 	color: #666;
@@ -214,7 +215,7 @@ table {
 			<g id="compass-east" fill="#000000">
 				<path d="M93.966,51.388v-1.943h-1.253v2.17h-0.979v-3.368h5.28v3.258h-0.979v-2.06h-1.097v1.943
 					C94.938,51.388,93.966,51.388,93.966,51.388z"></path>
-			<polygon points="89.831,50.126 85.602,51.606 85.602,48.646"></polygon>
+				<polygon points="89.831,50.126 85.602,51.606 85.602,48.646"></polygon>
 			</g>
 			<g id="compass-west" fill="#00000">
 				<path d="M7.601,52.347L2.321,53.6v-1.277l2.178-0.4c0.627-0.117,1.308-0.227,1.84-0.313v-0.016
@@ -231,46 +232,6 @@ table {
 					c0.603,0,1.198,0.156,1.496,0.321L51.561,93.27z"></path>
 				<polygon points="49.891,90.261 48.41,86.031 51.371,86.031"></polygon>
 			</g>
-			<g fill="#000000">
-				<path fill="#000000" d="M77.86,18.709l2.796-2.896l0.408,0.394l-0.486,2.361c-0.113,0.547-0.24,1.014-0.389,1.443l0.013,0.004
-					c0.339-0.42,0.671-0.78,1.106-1.231l1.17-1.211l0.352,0.34l-2.795,2.896l-0.378-0.365l0.499-2.357
-					c0.109-0.517,0.235-1.034,0.392-1.489l-0.017-0.008c-0.331,0.386-0.659,0.742-1.123,1.223l-1.195,1.237L77.86,18.709z"></path>
-				<path fill="#000000" d="M83.387,21.736l-1.036-1.172l-1.087,0.96l1.154,1.307l-0.327,0.288l-1.498-1.696l3.015-2.664l1.439,1.629
-					l-0.327,0.288l-1.094-1.239l-0.953,0.842l1.036,1.172L83.387,21.736z"></path>
-			</g>
-			<g fill="#000000">
-				<path fill="#000000" d="M17.127,23.45l-3.028-2.652l0.374-0.427l2.382,0.371c0.552,0.086,1.024,0.19,1.46,0.318l0.003-0.013
-					c-0.436-0.318-0.812-0.632-1.284-1.045l-1.267-1.11l0.322-0.368l3.028,2.652l-0.346,0.395l-2.379-0.384
-					c-0.522-0.084-1.045-0.185-1.506-0.319l-0.007,0.017c0.401,0.312,0.773,0.622,1.276,1.062l1.294,1.133L17.127,23.45z"></path>
-				<path fill="#000000" d="M20.137,20.136l-3.484-2.258l0.403-0.373l1.734,1.169c0.429,0.287,0.848,0.581,1.165,0.817l0.009-0.008
-					c-0.224-0.338-0.456-0.774-0.709-1.248l-0.986-1.854l0.398-0.369l1.747,1.165c0.408,0.273,0.811,0.551,1.143,0.821l0.009-0.008
-					c-0.239-0.381-0.46-0.786-0.709-1.239l-0.99-1.85l0.39-0.361l1.899,3.727l-0.399,0.369l-1.797-1.192
-					c-0.441-0.291-0.77-0.524-1.086-0.785l-0.009,0.008c0.22,0.342,0.422,0.692,0.665,1.174l1.004,1.927L20.137,20.136z"></path>
-			</g>
-			<g fill="#000000">
-				<path fill="#000000" d="M22.282,82.67c-0.079-0.262-0.255-0.576-0.523-0.814c-0.398-0.352-0.816-0.348-1.085-0.044
-					c-0.25,0.281-0.231,0.585,0.037,1.101c0.337,0.61,0.415,1.134,0.039,1.558c-0.415,0.469-1.113,0.473-1.698-0.045
-					c-0.308-0.273-0.468-0.543-0.535-0.737l0.388-0.222c0.051,0.141,0.173,0.408,0.445,0.649c0.411,0.364,0.785,0.257,0.967,0.051
-					c0.249-0.281,0.189-0.582-0.084-1.111c-0.335-0.648-0.377-1.123,0.015-1.565c0.412-0.465,1.112-0.562,1.822,0.067
-					c0.291,0.257,0.532,0.623,0.599,0.873L22.282,82.67z"></path>
-				<path fill="#000000" d="M20.053,79.783l-2.237,3.496l-0.376-0.401l1.159-1.74c0.284-0.43,0.576-0.851,0.81-1.169l-0.008-0.009
-					c-0.337,0.226-0.771,0.461-1.244,0.716l-1.848,0.996l-0.371-0.396l1.155-1.753c0.271-0.409,0.546-0.814,0.814-1.148l-0.008-0.009
-					c-0.379,0.241-0.783,0.464-1.235,0.716l-1.844,1l-0.363-0.387l3.715-1.92l0.371,0.396l-1.182,1.803
-					c-0.289,0.443-0.519,0.773-0.779,1.09l0.008,0.009c0.341-0.221,0.689-0.425,1.17-0.672l1.921-1.015L20.053,79.783z"></path>
-			</g>
-			<g fill="#000000">
-				<path fill="#000000" d="M81.742,78.258c-0.264,0.073-0.583,0.241-0.827,0.503c-0.362,0.389-0.368,0.808-0.07,1.084
-					c0.276,0.256,0.58,0.245,1.102-0.011c0.618-0.322,1.143-0.388,1.559-0.002c0.46,0.427,0.447,1.124-0.085,1.697
-					c-0.281,0.302-0.554,0.455-0.75,0.518l-0.213-0.394c0.142-0.047,0.412-0.163,0.66-0.43c0.374-0.403,0.275-0.779,0.074-0.966
-					c-0.276-0.256-0.578-0.203-1.113,0.058c-0.655,0.32-1.132,0.35-1.565-0.053c-0.455-0.423-0.535-1.125,0.111-1.821
-					c0.264-0.284,0.636-0.517,0.887-0.577L81.742,78.258z"></path>
-				<path fill="#000000" d="M79.011,82.774l1.141-1.07l-0.992-1.058l-1.272,1.192L77.59,81.52l1.65-1.547l2.752,2.936l-1.586,1.486
-					l-0.298-0.318l1.206-1.131l-0.869-0.928l-1.141,1.07L79.011,82.774z"></path>
-			</g>
-			<polygon fill="#000000" points="78.299,21.718 76.356,25.755 74.262,23.661 		"></polygon>
-			<polygon fill="#000000" points="21.482,78.534 23.426,74.498 25.519,76.591 		"></polygon>
-			<polygon fill="#000000" points="78.202,78.438 74.165,76.494 76.259,74.401 		"></polygon>
-			<polygon fill="#000000" points="21.385,21.62 25.422,23.564 23.329,25.657 		"></polygon>
 		</g>
 	</svg>
 </svg>
@@ -284,11 +245,7 @@ table {
   <td>Azimuth</td>
   <td><span id="tracking-az-deg-span">---.-</span>°</td>
   <td><span id="tracking-az-deg-desired-span">---.-</span>°</td>
-</tr>
-<tr id="statustable-elevation">
-  <td>Elevation</td>
-  <td><span id="tracking-el-deg-span">---.-</span>°</td>
-  <td><span id="tracking-el-deg-desired-span">---.-</span>°</td>
+  <td><button id="stop-button" disabled>STOP</button></td>
 </tr>
 </table>
 <br />
