--- a/firmware/web/src/index.html
+++ b/firmware/web/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="GB3HV Rotator Web Interface">
+<meta name="description" content="GB3HV Rotator Control">
 <meta name="author" content="Phil Crump M0DNY">
 <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 <title>GB3HV Rotator Control</title>
@@ -285,6 +285,8 @@ table {
 <br />
 
 <b>Output State</b> <span id="tracking-cw-span">CW</span> <span id="tracking-ccw-span">CCW</span><br />
+<br />
+<b><a href="/settings">Settings</a></b><br />
 
 <div id="footer">
 	<pre>© Phil Crump M0DNY <phil@philcrump.co.uk></pre>
