--- a/firmware/web/src/index.html
+++ b/firmware/web/src/index.html
@@ -287,7 +287,7 @@ table {
 <b>Output State</b> <span id="tracking-cw-span">CW</span> <span id="tracking-ccw-span">CCW</span><br />
 
 <div id="footer">
-	<pre>© Phil Crump M0DNY <phil@philcrump.co.uk></pre>
+	<pre>© 2019 Phil Crump M0DNY <phil@philcrump.co.uk></pre>
 </div>
 
 </body>
