web/index.html: Update bearing presets.

--- a/firmware/web/src/index.html
+++ b/firmware/web/src/index.html
@@ -253,28 +253,28 @@ table {
 <br />
 <table>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(0);">North - <b>000°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(200);">P'mouth / C'bourg - <b>200°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(342);">G0MJW - <b>342°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(10);">Reading - <b>010°</b></button></td>
 	</tr>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(19);">Luton (G4CPE) - <b>019°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(235);">Soton / B'mouth (G4KLB) - <b>235°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(335);">G8GTZ - <b>335°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(38);">Slough - <b>038°</b></button></td>
 	</tr>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(25);">Pinner (G8ADM) - <b>025°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(275);">Basingstoke (G8GTZ) - <b>275°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(206);">Andover - <b>206°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(67);">Croydon - <b>067°</b></button></td>
 	</tr>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(56);">London - <b>056°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(300);">Newbury (G8DGR) - <b>300°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(286);">Winchester - <b>286°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(92);">Crawley - <b>092°</b></button></td>
 	</tr>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(150);">Brighton / Paris - <b>150°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(340);">Reading - <b>340°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(230);">Bournemouth - <b>230°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(143);">Petersfield - <b>143°</b></button></td>
 	</tr>
 	<tr>
-		<td><button class="table-bearings-button" onclick="submit_bearing(175);">Worthing / Le Havre - <b>175°</b></button></td>
-		<td><button class="table-bearings-button" onclick="submit_bearing(346);">(G1HBD / G8DKC) - <b>346°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(200);">Portsmouth - <b>200°</b></button></td>
+		<td><button class="table-bearings-button" onclick="submit_bearing(170);">Havant - <b>170°</b></button></td>
 	</tr>
 	<tr>
 		<td colspan="2"><b>Manual Bearing:</b> <input type="text" id="bearing-input"></input>°&nbsp;<button id="submit-button">Go</button></td>
